<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/plan_swipe_layout"
		android:layout_width="match_parent" android:layout_height="wrap_content">
	<!-- Bottom View Start-->
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent">
		<!--What you want to show in SurfaceView-->
		<Button
				android:layout_width="48dp"
				android:layout_height="fill_parent"
				android:text="@string/move_up"
				android:background="@color/plan_blue"
				android:id="@+id/move_up_plan_btn"
				android:layout_marginRight="2dp"
				android:textAlignment="center"/>

		<Button
				android:layout_width="48dp"
				android:layout_height="fill_parent"
				android:text="@string/move_down"
				android:background="@color/plan_blue"
				android:id="@+id/move_down_plan_btn"
				android:layout_marginRight="2dp"
				android:textAlignment="center"/>
		<Button
				android:layout_width="48dp"
				android:layout_height="fill_parent"
				android:text="@string/delete"
				android:background="@color/plan_red"
				android:id="@+id/delete_plan_btn"
				android:layout_marginRight="2dp"
				android:textAlignment="center"/>
	</LinearLayout>
	<!-- Bottom View End-->

	<!-- Surface View Start -->
	<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/plan_item_layout"
			android:paddingLeft="25dp" android:paddingRight="25dp" android:paddingTop="12dp"
			android:paddingBottom="12dp">

		<ImageView
				android:layout_width="10dp"
				android:background="@drawable/color_tag"
				android:layout_height="fill_parent"
				android:contentDescription="@string/circle"
				android:id="@+id/color_tag" android:padding="0dp"/>
		<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:text="计划"
				android:id="@+id/plan_finish_checkbox" android:checked="false" android:textSize="24sp"
				android:singleLine="false"/>
	</LinearLayout>
	<!-- Surface View End -->

</com.daimajia.swipe.SwipeLayout>