<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:plan="http://schemas.android.com/apk/res-auto"
		android:background="@android:color/white"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:id="@+id/add_plan_area">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:id="@+id/adding_plan_time_info_area"
			android:layout_height="fill_parent"
			tools:visibility="visible"
			android:visibility="gone">

		<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">
			<TableRow android:gravity="center_horizontal">
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						plan:color_filter="@color/plan_null"
						android:checked="true"
						android:id="@+id/plan_null"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"/>
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"
						plan:color_filter="@color/plan_red"
						android:id="@+id/plan_red"
						/>
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"
						plan:color_filter="@color/plan_orange"
						android:id="@+id/plan_orange"
						/>
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"
						plan:color_filter="@color/plan_yellow"
						android:id="@+id/plan_yellow"
						/>
			</TableRow>
			<TableRow android:gravity="center_horizontal"
			          android:layout_marginTop="5dp">
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"
						plan:color_filter="@color/plan_grey"
						android:id="@+id/plan_grey"
						/>
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"
						plan:color_filter="@color/plan_blue"
						android:id="@+id/plan_blue"
						/>
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"
						plan:color_filter="@color/plan_cyan"
						android:id="@+id/plan_cyan"
						/>
				<com.gongshw.plan.android.widget.ColorPickerItem
						android:layout_width="@dimen/color_item_size"
						android:layout_height="@dimen/color_item_size"
						android:layout_marginLeft="@dimen/color_item_margin"
						android:layout_marginRight="@dimen/color_item_margin"
						plan:color_filter="@color/plan_green"
						android:id="@+id/plan_green"
						/>
			</TableRow>
		</TableLayout>

		<RadioGroup
				android:id="@+id/unit_radios"
				android:layout_width="match_parent"
				android:layout_height="fill_parent"
				android:orientation="horizontal">
			<RadioButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/once_a_day"
					android:id="@+id/rb_day_repeat" android:textSize="16sp"
					android:checked="true"/>
			<RadioButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/once_a_week"
					android:id="@+id/rb_week_repeat" android:textSize="16sp"/>
			<RadioButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/once_a_month"
					android:id="@+id/rb_month_repeat" android:textSize="16sp"/>
		</RadioGroup>
		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/start_now" android:gravity="center"/>

	</LinearLayout>
	<EditText
			android:layout_width="fill_parent"
			android:hint="@string/add_plan_hint"
			android:layout_height="0dp"
			android:id="@+id/adding_plan_edit_text" android:layout_gravity="bottom" android:layout_weight="1"
			android:inputType="text"/>
</LinearLayout>
